--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <td> <img src="https://scontent.frdp1-1.fna.fbcdn.net/v/t31.0-8/s851x315/28071269_2019415594937814_2852076728227797961_o.jpg?_nc_cat=103&ccb=2&_nc_sid=da31f3&_nc_ohc=lB3JlkRnUWEAX_25J8i&_nc_ht=scontent.frdp1-1.fna&tp=7&oh=9413ba462722f17a1ed47b1456af0e2a&oe=600F7949" alt="Sakil Profile Picture" height="190" width="175"></td>
         <td>  <h1>Md Sakil Mallick</h1>
           <p><em>Completed School from <strong>Bagnan High School</strong>.</em></p>
-          <p>Leaning web development on <a href="https://www.udemy.com/">Udemy</a> app.</p></td>
+          <p>Learning web development on <a href="https://www.udemy.com/">Udemy</a> app.</p></td>
       </tr>
     </table>
 
